[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/WinScreen/WinScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/GreatVibes-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/MusicAndSounds/BGM/mixkit-arctic-winds-1154.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/MusicAndSounds/BGM/2019-06-14_-_Warm_Light_-_David_Fesliyan.mp3" type="AudioStream" id=5]

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0.00645161, 0.341935, 0.522581, 0.703226, 0.935484 )
colors = PoolColorArray( 1, 1, 1, 1, 0.197565, 0.779982, 0.991699, 0, 0.300781, 0.649708, 1, 1, 0.0869141, 0, 1, 1, 0.461914, 0, 1, 0 )

[sub_resource type="GradientTexture" id=16]
gradient = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=17]
lifetime_randomness = 0.37
emission_shape = 2
emission_box_extents = Vector3( 200, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 20, 0 )
initial_velocity = 69.31
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 16 )

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0.631285, 0.988827, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.0614525, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=18]
gradient = SubResource( 14 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 0.508621, 0.524785 )

[sub_resource type="DynamicFont" id=3]
size = 39
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRectFront:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRectFront:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="WinScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRectBack" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 1, 362 )
rotation = -2.24388
amount = 200
lifetime = 10.0
process_material = SubResource( 17 )
texture = SubResource( 18 )

[node name="YouWin" type="Label" parent="."]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.1
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "You win text goes here"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -25.0
margin_right = 37.0
margin_bottom = 25.0

[node name="Restart" type="Button" parent="VBoxContainer"]
margin_right = 74.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
text = "Restart"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 74.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 5 )
text = "Main Menu"

[node name="ColorRectFront" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/fade_in = SubResource( 2 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -25.0
autoplay = true
bus = "Music"

[node name="Wind" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0
autoplay = true
bus = "SFX"

[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
